tdf#90292: Crash in pivot table when dragging field into Rows fields

Regression from 6bf3b6d420873e236b2805a42a95ce33e614ad98

Change-Id: I422958e5979abeee1b07a4d0e81328d72d2c61c9